Fix align element And font size

--- a/css/styles.css
+++ b/css/styles.css
@@ -3112,7 +3112,7 @@ body {
     width: 100%;
     left: 0;
     right: 0;
-    font-size: 11px;
+    font-size: 18px;
     line-height: 30px;
     text-transform: capitalize;
     top: 50%;
@@ -3141,7 +3141,7 @@ body {
     text-align: center;
     width: 100%;
     left: 0;
-    font-size: 9px;
+    font-size: 15px;
     top: 50%;
     margin-top: 30px;
     transform: translateX(-70px) translateY(0) translateZ(0) rotate(0deg) scale(1);
